--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser-dynamic": "^5.0.1",
     "@angular/router": "^5.0.1",
     "@ng-select/ng-select": "^0.21.0",
+    "@types/html2canvas": "0.0.33",
+    "@types/jspdf": "^1.1.31",
     "angular-calendar": "^0.23.6",
     "angular-gridster2": "^4.7.2",
     "angular-highcharts": "^5.2.10",
@@ -35,7 +37,9 @@
     "core-js": "^2.5.1",
     "font-awesome": "^4.7.0",
     "highcharts": "^6.0.7",
+    "html2canvas": "^1.0.0-alpha.12",
     "intl": "^1.2.5",
+    "jspdf": "^1.4.1",
     "moment": "^2.20.1",
     "ng-dynamic-component": "^2.0.3",
     "ng2-eonasdan-datetimepicker": "^0.1.3",
